--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,3 +24,22 @@
     border-radius: 10px;
     overflow: hidden;
 }
+
+.input-file {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.input-file + label {
+    background-color: lightcoral;
+    color: white;
+    cursor: pointer;
+}
+
+.input-file + label:hover {
+    color: red;
+}
