--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,11 +49,10 @@
 }
 
 .overlay {
-    position: fixed;
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: lightcoral;
-    opacity: 50%;
 }
