--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,17 +4,35 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 #main {
     padding-left: 15%;
+    padding-right: 15%;
+}
+
+#nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 #title {
     font-size: 30px;
 }
 
-#wave-emoji {
+#logo {
     height: 30px;
-    width: 30px;
+}
+
+#img-form {
+    margin: 50px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .input-file {
@@ -44,25 +62,30 @@
     width: 350px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    border-radius: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
+    align-items: center;
     overflow: hidden;
     text-align: center;
+    padding: 10px;
 }
 
 .img-container {
     height: 300px;
-    width: 300px;
+    width: 100%;
+    /* box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.5); */
+    border-radius: 10px;
 }
 
 .images {
-    align-self: center;
-    max-width: 100%;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.img-title {
+    margin: 0;
+    margin-top: 8px;
+    font-size: 16px;
 }
 
 a {
@@ -71,9 +94,73 @@ a {
 }
 
 .overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    overflow-y: scroll;
+}
+
+#close {
+    font-size: 50px;
+    /* display: flex;
+    flex-direction: column;
+    align-items: flex-end; */
+    background-color: transparent;
+}
+
+.modal-box-cont {
+    width: 80%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal-img-cont {
+    height: 500px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.image {
+    max-height: 100%;
+    max-width: 100%;
+    height: auto;
+    width: auto;
+}
+
+#wave-emoji {
+    height: 30px;
+    width: 30px;
+}
+
+.img-upload {
+    font-size: 12px;
+}
+
+#delete {
+    height: 30px;
+}
+
+#description {
+    width: 500px;
+}
+
+#comment-form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.comments {
+    width: 100%;
 }
