--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,6 +46,7 @@ body {
 
 .black-border {
     border: 1px black solid;
+    border-radius: 5px;
 }
 
 .second {
@@ -151,9 +152,6 @@ a {
 
 #close {
     font-size: 50px;
-    /* display: flex;
-    flex-direction: column;
-    align-items: flex-end; */
     background-color: transparent;
 }
 
@@ -197,8 +195,7 @@ a {
 }
 
 #wave-emoji {
-    height: 30px;
-    width: 30px;
+    height: 20px;
 }
 
 .img-upload {
@@ -209,12 +206,12 @@ a {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: baseline;
 }
 
 #delete {
-    height: 30px;
+    height: 20px;
 }
 
 .description {
@@ -232,12 +229,34 @@ a {
 #comment-form {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     width: 100%;
+    padding-bottom: 20px;
 }
 
 .comments {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border: 1px solid black;
+    padding-bottom: 20px;
+}
+
+#comments {
+    margin-bottom: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.whowhen {
+    align-self: flex-start;
+    font-size: 12px;
+}
+
+.komentar {
+    align-self: center;
 }
 
 footer {
