--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,6 +47,10 @@ body {
 .black-border {
     border: 1px black solid;
     border-radius: 5px;
+    text-align: center;
+    height: 40px;
+    width: 200px;
+    margin: 5px;
 }
 
 .second {
@@ -86,6 +90,8 @@ body {
 }
 
 .grid-container {
+    display: flex;
+    justify-content: center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
@@ -104,7 +110,6 @@ body {
 .img-container {
     height: 300px;
     width: 100%;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
 }
 
@@ -113,6 +118,12 @@ body {
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+    opacity: 0.7;
+}
+
+.images:hover {
+    opacity: 1;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.5);
 }
 
 .img-title {
@@ -144,31 +155,36 @@ a {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
     align-items: center;
-    overflow-y: scroll;
 }
 
 #close {
     font-size: 50px;
     background-color: transparent;
+    position: fixed;
+    top: 0;
+}
+#close:hover {
+    cursor: pointer;
 }
 
 .modal-box-cont {
-    width: 80%;
-    height: 90%;
+    position: fixed;
+    max-height: 80%;
+    max-width: 80%;
+    width: -webkit-max-content;
+    height: -webkit-max-content;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
 }
 
-.modal-img-cont {
+.image {
+    max-width: 100%;
     max-height: 100%;
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-shrink: 3;
+    object-fit: none;
 }
 
 .img-arr {
@@ -183,15 +199,20 @@ a {
     font-size: 40px;
 }
 
-.image {
-    max-height: 100%;
-    max-width: 100%;
-    height: auto;
-    width: auto;
-}
-
 .arrows {
     font-size: 100px;
+    position: fixed;
+    background-color: transparent;
+}
+.arrows:hover {
+    cursor: pointer;
+}
+
+#left-arr {
+    left: 0;
+}
+#right-arr {
+    right: 0;
 }
 
 #wave-emoji {
@@ -228,10 +249,10 @@ a {
 
 #comment-form {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
     width: 100%;
     padding-bottom: 20px;
+    align-self: self-end;
 }
 
 .comments {
@@ -239,20 +260,24 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border: 1px solid black;
     padding-bottom: 20px;
 }
 
 #comments {
-    margin-bottom: 50px;
-    width: 100%;
+    width: 400px;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
 }
 
-.whowhen {
+.who {
     align-self: flex-start;
     font-size: 12px;
+}
+.when {
+    align-self: flex-start;
+    font-size: 12px;
+    color: grey;
 }
 
 .komentar {
